--- a/MakeMyTrip/test-output/old/Default suite/methods.html
+++ b/MakeMyTrip/test-output/old/Default suite/methods.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9b492">  <td>15/05/20 23:46:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBooking.domesticBooking()[pri:0, instance:testCase.FlightBooking@7b5a6029]">domesticBooking</td> 
-  <td>main@523732435</td>   <td></td> </tr>
+<tr bgcolor="d98fe2">  <td>15/05/21 13:35:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FlightBooking.domesticBooking()[pri:0, instance:testCase.FlightBooking@524010]">domesticBooking</td> 
+  <td>main@12042244</td>   <td></td> </tr>
 </table>
